styles.css
/* metal-mania-latin-400-normal */
@font-face {
  font-family: 'Metal Mania';
  font-style: normal;
  font-display: swap;
  font-weight: 400;
  src: url(https://cdn.jsdelivr.net/fontsource/fonts/metal-mania@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/metal-mania@latest/latin-400-normal.woff) format('woff');
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

body {
    margin: 0;
    padding: 0;
    height: 98vh;
  }
  
  #main {
    background-image: url("./assets/samuraigameBG.jpeg");
    background-size: cover;
    width: 100%;
    display: flex;
    /* flex-direction: column; */
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 100vh;
  }
  
  #welcome_text {
    text-shadow: 1px 1px 4px #000;
    color: white;
  }
  
  #welcome {
      
      display: block;
  }
  
  #btn-start {
    width: 150px;
    height: 40px;
    border-radius: 5px;
    color: white;
    background-color: red;
    text-align: center;
    font-weight: 500;
    cursor: pointer;
    border:none;
    transition: scale 0.2s;
    letter-spacing: 1px;
    
  }

  #btn-start:hover {
    border: solid 2px #F0F0F0;
    scale: 1.1;
  }
  
  /* Pre-Game page */
  
  #pregame-page {
      display: none;
      height: 100vh;
      width: auto;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      background-image: url('./assets/pregameBG1.jpg');
      background-size: cover;
      background-repeat: no-repeat;
  }
  

  #lore-content {
    text-shadow: 1px 1px 2px #000;
    width: 300px;
    height: 460px;
    padding: 20px 40px;
    background-color: rgba(47, 79, 79, 0.5);
    margin-top: 10px;
    color: #1d0303;
    font-style: italic;
    font-weight: 600;
    -webkit-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    -moz-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    box-shadow: 5px 5px 5px 0px rgba(15,14,15,1);
    border-radius: 5px;
    position: relative;
  }

  @media (max-width: 400px) {
    #lore-content {
      width: 75%;
      max-width: 380px;
      height: 500px;
    }
  }

  #lore-content h1{
    text-align: center;
    position: relative;
    
  }
  #bg-lore {
    position: absolute;
    object-fit: cover;
    opacity: 0.6;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-position: top center;
    border-radius: 5px;
  }

  #lore-text {
    position: relative;
    letter-spacing: 0.5px;
  }

  #btn-skip, #btn-instructions {
    position: absolute;
    font-weight: 600;
    
    bottom: 10px;
    border-radius: 50%;
    padding: 5px;
    border: none;
    background-color: #f0f0f0;
    cursor: pointer;
    transition: all 0.3s;
    -webkit-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    -moz-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    box-shadow: 5px 5px 5px 0px rgba(15,14,15,1);
  }

  #btn-skip {
    right: 10px;
  }

  #btn-instructions {
    left: 10px;
    border-radius: 8px;
    
  }

  
  #instructions {
    display: none;
    background-image: url("./assets/keyboard-instructions.png");
    background-size: cover;
    background-color: rgba(253, 253, 253, 0.5);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 90%;
    max-width: 600px;
    height: 450px;
    border-radius: 6px;
  }

  @media (max-width: 610px) {
    #instructions {
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
    }
  }

 #instructions-close-container {
  position: relative;
  width: 100%;
  height: 100%;
 }

 #instructions-close {
    position: absolute;
    top: 10px;
    right: 10px;
    border: none;
    cursor: pointer;
    font-weight: bolder;
    font-size: 1.5rem;
    color: red;
 }
 
  
  /* Game page */

  #game-page-container {
    background-image: url("./assets/pregameBG1.jpg");
    background-size: cover;
    background-position: 75% 50%;
    /* border: solid red; */
    height: 100vh;
    display: none;
    justify-content: center;
    align-items: center;
  }
  
  #game-page {
    width: 800px;
    height: 600px;
    background-image: url("/gameScreenBG.webp");
    background-repeat: no-repeat;
    background-size: contain;
    position: relative;
    border-radius: 8px;
    -webkit-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    -moz-box-shadow: 3px 3px 5px 0px rgba(15,14,15,1);
    box-shadow: 5px 5px 5px 0px rgba(15,14,15,1);
  }

  #player {
    /* border: solid red; */
    position: absolute;
    height: 192px;
    width: 192px;
    background-image: url("./SpriteSheets/Samurai/Idle.png");
    background-position: 192px 192px;
    background-size: cover;
  }

  #player-stats {
    padding: 1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  #player-stats h2 {
    color: white;
    margin: 0;
  }

  .heart {
    font-size: 2rem;
  }

  .fa-heart {
    color: rgb(168, 26, 26);
  }

  .fa-heart-crack {
    color: rgb(228, 149, 162);
  }
  
  #game-over, #game-won {
    width: 500px;
    height: 300px;
    color: #1948bf;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 6px;
    background-image: url("https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWh5bXVyYzM2ZjN5cnRsOTJxOXF2cXQ3NTZxdGZjcmt6YXUzOWVmNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/nzCDqg3pNqg7K/giphy.gif");
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 0px 0px 8px 0px #1948bf
  }

  

  #game-over h1, #game-over h2 {
    text-shadow: 1px 1px 2px #FFF;
    margin: 0;
  }

  #game-over h1 {
    margin-bottom: 0.5em
  }

  #game-over h2 {
    font-size: 1.75rem;
  }

  .reset-btn {
    margin-top: 2em;
    font-size: 1rem;
    padding: 0.5em 1em;
    border: none;
    border-radius: 4px;
    color: white;
    background-color: #1948bf;
    transition: 0.2s;
    cursor: pointer;
    font-weight: 500;
    letter-spacing: 0.5px;
  }

  .reset-btn:hover {
    transform: scale(1.1);
    border: 1px solid white;
  }

  /* GAME WON SCREEN */
  #game-won {
    background-image: url("https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcWw4NG8zcDd0Z3R1eDY2eGgzbTV3MnRvNjNmODJvaGtjZXp5aG44ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/jzHFPlw89eTqU/giphy.gif");
    color: #FFF;
    text-shadow: 1px 1px 4px #000;
  }

  /* Boss Text */

  .boss-text {
    font-family: 'Metal Mania';
    font-size: 3.5rem;
    text-shadow: 1px 1px 4px #000;
    letter-spacing: 2px;
    width: fit-content;
    height: fit-content;
    position: absolute;
    color: rgb(168, 26, 26);
    top: -40%;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    animation: blinker 1s linear infinite;
  }

  @keyframes blinker {
    50% {
      opacity: 0;
    }
  }


  /* Styles for the Mobile only Page */

  #mobile-page {
    text-align: center;
    padding: 0 2em;
    color: #F8F8F8;
    display: none;
    height: 100vh;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: url("./assets/sad-samurai.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    text-shadow: 2px 2px 4px #000;
  }

  #mobile-page .mobile-page-text-container {
    width: 100%;
    max-width: 600px;
  }

  #mobile-page h1 {
    font-size: 2rem;
    margin: 0;
  }

  #mobile-page .samurai-message-text {
    font-size: 1rem;
    letter-spacing: 1px;
  }

